force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Listing</fullName>
            </value>
            <value>
                <fullName>Offer Submitted</fullName>
            </value>
            <value>
                <fullName>Under Contract</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>