force-app/main/default/objects/Account/fields/Test_Account_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Test_Account_Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Account Field 1</label>
    <type>Checkbox</type>
</CustomField>